# hc32f4a0-bootloader

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md
fatfs/: CMakeLists.txt
fatfs/inc/: ffconf.h
fatfs/src/: diskio.c
hardware/inc/: at24c512.h  iic.h  mygpio.h  mysys.h  sd.h  sd_diskio.h  sdio.h  uart.h.bak  uart_debug.h
hardware/src/: at24c512.c  iic.c  mygpio.c  mysys.c  sd.c  sd_diskio.c  sdio.c  syscalls.c  uart.c.bak  uart_debug.c
iap/inc/: flash.h  iap.h
iap/src/: flash.c  iap.c
inc/: main.h
src/: main.c
